fix: Standarize spacing

--- a/src/App/components/Home/GroupDetails/index.css
+++ b/src/App/components/Home/GroupDetails/index.css
@@ -1,7 +1,7 @@
 .group-details {
     margin: 2.5%;
     padding: 2.5%;
-    margin-top: 4%;
+    margin-top: 3%;
     margin-bottom: 0;
     background-color: #f8f8ff;
 }
