--- a/src/App/shared/SocialMediaIcons/index.css
+++ b/src/App/shared/SocialMediaIcons/index.css
@@ -4,6 +4,6 @@
   padding: 1%;
 }
 .social-icon {
-  margin-top: 4%;
+  margin-top: 3%;
   margin-right: 1%;
 }
